istio/scripts/01-traffic-management/16-https-service-entry-for-ibm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ibm
spec:
  hosts:
  - www.ibm.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
